Add MaxPermGen option to gradle wrapper